<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@id/imagen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:contentDescription="@null"
            android:minHeight="@dimen/iv_minheight_imagen" />

        <android.support.v7.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_action_communication_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical">

                <com.tismart.tsmlibrary.views.CustomTextView
                    android:id="@id/tv_telefono"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/telefono_numero"
                    app:typeface="regular" />

                <com.tismart.tsmlibrary.views.CustomTextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/telefono"
                    app:typeface="regular" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:background="@color/common_action_bar_splitter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_action_content_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical">

                <com.tismart.tsmlibrary.views.CustomTextView
                    android:id="@id/tv_correo"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/email_texto"
                    app:typeface="regular" />

                <com.tismart.tsmlibrary.views.CustomTextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/email_contacto"
                    app:typeface="regular" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:background="@color/common_action_bar_splitter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_action_action_language" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical">

                <com.tismart.tsmlibrary.views.CustomTextView
                    android:id="@id/tv_web"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/paginaweb_texto"
                    app:typeface="regular" />

                <com.tismart.tsmlibrary.views.CustomTextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/paginaweb"
                    app:typeface="regular" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
